--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css" >
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
@@ -16,10 +15,10 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете 
-        использовать в своей жизни? <a href="" class="header__link" target="_blank">Узнать &rarr;</a>
+        использовать в своей жизни? <a href="#" class="header__link opacity-link" target="_blank">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
-      <div class="header__square-pic"></div>  
+      <div class="header__square-pic rotation"></div>  
     </header>
 
     <main class="content">
@@ -46,6 +45,104 @@
             </p>
           </div>
         </article>
+      </section>
+
+      <section class="techniques">   
+        <h2 class="section-title">
+          Техники обучения
+        </h2>
+        <p class="section-subtitle">
+          Пять практик от Барбары Оакли
+        </p>
+        <ul class="cards">
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-attention.png" alt="Книга в руках">
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать 
+                сфокусированное и рассеянное мышление.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-recall.png" alt="Статуя">
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит 
+                соединить разрозненные порции памяти.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-interliving.png" alt="Большой зал">
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, 
+                они обогащают друг друга.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-question.png" alt="Человек в белом помещении">
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, 
+                который вас действительно волнует.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг на руке">
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: 
+                вам только кажется, что вы владеете новой темой.
+              </p>
+            </li>
+        </ul>
+      </section>
+
+      <section class="video">   
+        <h2 class="section-title">
+          Видео на TED
+        </h2>
+        <p class="section-subtitle">
+          Для тех, кто любит прокрастинировать
+        </p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" 
+            title="YouTube video player"  
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+            picture-in-picture; web-share" allowfullscreen>
+          </iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" 
+            title="YouTube video player" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+            picture-in-picture; web-share" allowfullscreen>
+          </iframe>
+        </div>
+      </section>
+
+      <section class="oakley" aria-label="две колонки">      
+        <article class="two-columns">
+          <h2 class="two-columns__brief">
+            История Барбары Оакли.
+          </h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя 
+              законченным гуманитарием, причём далеко не самым умным. 
+              В армии она изучала русский язык, чтобы получить надбавку, 
+              да так успешно, что её выдвинули в командиры. 
+              Но для продвижения по службе нужно было сдавать математику. 
+              И тогда Барбара придумала свой подход к точным наукам. 
+              Оказалось, если вам что-то «плохо даётся», ваши добытые 
+              трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link opacity-link" target="_blank">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">   
@@ -93,10 +190,27 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="" class="feynman__link" target="_blank">Подробнее &rarr;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">
+            <p class="khan__quote-text">
+              Страсть и новаторство Сала Хана меняют процесс 
+              обучения миллионов студентов по всему миру. 
+              Книгу «Весь мир — школа» нужно прочитать всем, 
+              кто занимается образованием — так учащиеся 
+              повсюду смогут получить навыки и знания, 
+              которые приносят успех в школе, карьере и жизни.
+            </p>
+          </blockquote>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Весь мир - школа">
+            <a href="#" class="khan__buy-link opacity-link" target="_blank">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -148,7 +262,37 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">
+          Полезные ресурсы
+        </h2>
+        <p class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </p>
+        <ul class="resources__logo-zone">
+          <li>
+            <a class="resources__link opacity-link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link opacity-link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н + 1">
+            </a>
+          </li>
+          <li><a class="resources__link opacity-link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link opacity-link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
 
@@ -163,23 +307,23 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О практикуме</h2>
           <div class="footer__column-links">
-            <a href="" class="footer__column-link" target="_blank">Главная</a>
-            <a href="" class="footer__column-link" target="_blank">Концепция</a>
-            <a href="" class="footer__column-link" target="_blank">Наставники</a>
+            <a href="#" class="footer__column-link opacity-link" target="_blank">Главная</a>
+            <a href="#" class="footer__column-link opacity-link" target="_blank">Концепция</a>
+            <a href="#" class="footer__column-link opacity-link" target="_blank">Наставники</a>
           </div>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <div class="footer__column-links">
-            <a href="" class="footer__column-link" target="_blank"> 
+            <a href="#" class="footer__column-link opacity-link" target="_blank"> 
               <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Иконка YouTube">
               YouTube
             </a>
-            <a href="" class="footer__column-link" target="_blank">
+            <a href="#" class="footer__column-link opacity-link" target="_blank">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">
               Вконтакте
             </a>
-            <a href="" class="footer__column-link" target="_blank"> 
+            <a href="#" class="footer__column-link opacity-link" target="_blank"> 
               <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Иконка TikTok">
               TikTok
             </a>
